--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -33,6 +33,7 @@
         display: inline-block;
         margin-right: 10px;
         color: $purple;
+        cursor: pointer;
     }
 }
 
@@ -142,6 +143,7 @@
                 width: 32px;
                 height: 32px;
                 border-radius: 50%;
+                cursor: pointer;
             }
         }
 
