--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -80,6 +80,9 @@
             font-size: 16px;
         }
     }
+    .user-register {
+        cursor: pointer;
+    }
 
     .login-user-btn,
     .register-user-btn {
