--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -117,16 +117,16 @@
       overflow: scroll;
   
       .cart-product {
-        display: flex; /* added property */
-        align-items: center; /* added property */
-        justify-content: space-between; /* added property */
+        display: flex; 
+        align-items: center; 
+        justify-content: space-between; 
         
         .cart-counter {
-          display: flex; /* added property */
-          align-items: center; /* added property */
+          display: flex; 
+          align-items: center; 
           
           button {
-            margin: 0 0.5rem; /* added property */
+            margin: 0 0.5rem;
             font-weight: bold;
           }
   
