--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -1,561 +1,1 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/* Sections
-     ========================================================================== */
-/**
-   * Remove the margin in all browsers.
-   */
-body {
-  margin: 0;
-}
-
-/**
-   * Render the `main` element consistently in IE.
-   */
-main {
-  display: block;
-}
-
-/**
-   * Correct the font size and margin on `h1` elements within `section` and
-   * `article` contexts in Chrome, Firefox, and Safari.
-   */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-     ========================================================================== */
-/**
-   * 1. Add the correct box sizing in Firefox.
-   * 2. Show the overflow in Edge and IE.
-   */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-     ========================================================================== */
-/**
-   * Remove the gray background on active links in IE 10.
-   */
-a {
-  background-color: transparent;
-}
-
-/**
-   * 1. Remove the bottom border in Chrome 57-
-   * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-   */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
-   * Add the correct font weight in Chrome, Edge, and Safari.
-   */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
-   * Add the correct font size in all browsers.
-   */
-small {
-  font-size: 80%;
-}
-
-/**
-   * Prevent `sub` and `sup` elements from affecting the line height in
-   * all browsers.
-   */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-     ========================================================================== */
-/**
-   * Remove the border on images inside links in IE 10.
-   */
-img {
-  border-style: none;
-}
-
-/* Forms
-     ========================================================================== */
-/**
-   * 1. Change the font styles in all browsers.
-   * 2. Remove the margin in Firefox and Safari.
-   */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
-   * Show the overflow in IE.
-   * 1. Show the overflow in Edge.
-   */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
-   * Remove the inheritance of text transform in Edge, Firefox, and IE.
-   * 1. Remove the inheritance of text transform in Firefox.
-   */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
-   * Correct the inability to style clickable types in iOS and Safari.
-   */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
-   * Remove the inner border and padding in Firefox.
-   */
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
-   * Restore the focus styles unset by the previous rule.
-   */
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
-   * Correct the padding in Firefox.
-   */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
-   * 1. Correct the text wrapping in Edge and IE.
-   * 2. Correct the color inheritance from `fieldset` elements in IE.
-   * 3. Remove the padding so developers are not caught out when they zero out
-   *    `fieldset` elements in all browsers.
-   */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
-   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
-   */
-progress {
-  vertical-align: baseline;
-}
-
-/**
-   * Remove the default vertical scrollbar in IE 10+.
-   */
-textarea {
-  overflow: auto;
-}
-
-/**
-   * 1. Add the correct box sizing in IE 10.
-   * 2. Remove the padding in IE 10.
-   */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
-   * Correct the cursor style of increment and decrement buttons in Chrome.
-   */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
-   * 1. Correct the odd appearance in Chrome and Safari.
-   * 2. Correct the outline style in Safari.
-   */
-[type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
-   * Remove the inner padding in Chrome and Safari on macOS.
-   */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
-   * 1. Correct the inability to style clickable types in iOS and Safari.
-   * 2. Change font properties to `inherit` in Safari.
-   */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-     ========================================================================== */
-/*
-   * Add the correct display in Edge, IE 10+, and Firefox.
-   */
-details {
-  display: block;
-}
-
-/*
-   * Add the correct display in all browsers.
-   */
-summary {
-  display: list-item;
-}
-
-/* Misc
-     ========================================================================== */
-/**
-   * Add the correct display in IE 10+.
-   */
-template {
-  display: none;
-}
-
-/**
-   * Add the correct display in IE 10.
-   */
-[hidden] {
-  display: none;
-}
-
-.header {
-  background-color: #F8CC8A;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 15vh;
-  width: 100%;
-}
-.header .header-title {
-  margin-bottom: -10px;
-}
-
-.user-nav {
-  position: fixed;
-  top: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  font-size: 1.1rem;
-}
-.user-nav .logged-in-username {
-  margin-right: 10px;
-  color: #5836d0;
-}
-.user-nav .user-nav-icon {
-  display: inline-block;
-  margin-right: 10px;
-  color: #5836d0;
-  cursor: pointer;
-}
-
-.login-page,
-.register-page {
-  position: fixed;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 95%;
-  max-width: 400px;
-  height: 55%;
-  background-color: #FFE8C7;
-  border: 2px solid black;
-  text-align: center;
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.login-page .login-title,
-.login-page .register-title,
-.register-page .login-title,
-.register-page .register-title {
-  color: #5836d0;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-.login-page .input-wrapper,
-.register-page .input-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 10px;
-}
-.login-page .input-wrapper label,
-.register-page .input-wrapper label {
-  display: block;
-  margin-bottom: 5px;
-}
-.login-page .input-wrapper input,
-.register-page .input-wrapper input {
-  width: 100%;
-  padding: 5px;
-  font-size: 16px;
-}
-.login-page .user-register,
-.register-page .user-register {
-  cursor: pointer;
-}
-.login-page .login-user-btn,
-.login-page .register-user-btn,
-.register-page .login-user-btn,
-.register-page .register-user-btn {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #F8CC8A;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  width: 50%;
-  cursor: pointer;
-}
-
-.cart {
-  position: fixed;
-  top: 10%;
-  left: 5%;
-  width: 90%;
-  height: 80%;
-  background-color: #FFE8C7;
-  border: 2px solid black;
-  text-align: center;
-  z-index: 10;
-  position: relative;
-}
-.cart .cart-title {
-  color: #5836d0;
-}
-.cart .cart-container {
-  background-color: white;
-  width: 92%;
-  margin: 4%;
-  overflow: scroll;
-}
-.cart .cart-container .cart-product {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.cart .cart-container .cart-product .cart-counter {
-  display: flex;
-  align-items: center;
-}
-.cart .cart-container .cart-product .cart-counter button {
-  margin: 0 0.5rem;
-  font-weight: bold;
-}
-.cart .cart-container .cart-product .cart-counter p {
-  margin: 0;
-  font-size: 1.2rem;
-}
-.cart .cart-container .cart-product .cart-product-img {
-  margin-right: 1rem;
-}
-.cart .cart-container .cart-product .cart-product-info {
-  flex: 1;
-  text-align: left;
-}
-
-.order {
-  background-color: #FFE8C7;
-  border: 2px solid black;
-  position: fixed;
-  left: 15%;
-  height: 70%;
-  width: 60%;
-  overflow: auto;
-  z-index: 20;
-}
-
-.categories-container {
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #FFE8C7;
-}
-.categories-container .category {
-  text-decoration: none;
-  display: inline-block;
-  width: 19%;
-  text-align: center;
-  margin-right: 1%;
-  color: black;
-}
-
-.products {
-  display: flex;
-  flex-wrap: wrap;
-}
-.products .product {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50%;
-  margin-top: 20px;
-}
-.products .product .product-img {
-  outline: 2px solid purple;
-  background-color: grey;
-  height: 200px;
-  width: 160px;
-}
-.products .product .product-counter-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.products .product .product-counter-container button {
-  margin-right: 0.5rem;
-  margin-left: 0.5rem;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.products .product .product-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.products .product .product-info .product-name {
-  margin-bottom: 0;
-}
-.products .product .product-info .product-price {
-  margin-top: 0;
-}
-
-.bg-popup {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.558);
-  z-index: 5;
-}
-
-.hidden {
-  display: none;
-}/*# sourceMappingURL=style.css.map */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:rgba(0,0,0,0)}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}.header{background-color:#f8cc8a;color:#fff;display:flex;justify-content:center;align-items:center;height:15vh;width:100%}.header .header-title{margin-bottom:-10px}.user-nav{position:fixed;top:0;right:0;display:flex;align-items:center;font-size:1.1rem}.user-nav .logged-in-username{margin-right:10px;color:#5836d0}.user-nav .user-nav-icon{display:inline-block;margin-right:10px;color:#5836d0;cursor:pointer}.login-page,.register-page{position:fixed;top:45%;left:50%;transform:translate(-50%, -50%);width:95%;max-width:400px;height:55%;background-color:#ffe8c7;border:2px solid #000;text-align:center;z-index:10;display:flex;flex-direction:column;align-items:center}.login-page .login-title,.login-page .register-title,.register-page .login-title,.register-page .register-title{color:#5836d0;margin-top:50px;margin-bottom:50px}.login-page .input-wrapper,.register-page .input-wrapper{display:flex;flex-direction:column;align-items:flex-start;margin-bottom:10px}.login-page .input-wrapper label,.register-page .input-wrapper label{display:block;margin-bottom:5px}.login-page .input-wrapper input,.register-page .input-wrapper input{width:100%;padding:5px;font-size:16px}.login-page .user-register,.register-page .user-register{cursor:pointer}.login-page .login-user-btn,.login-page .register-user-btn,.register-page .login-user-btn,.register-page .register-user-btn{margin-top:20px;padding:10px;background-color:#f8cc8a;color:#fff;border:none;border-radius:4px;width:50%;cursor:pointer}.cart{position:fixed;top:10%;left:5%;width:90%;height:80%;background-color:#ffe8c7;border:2px solid #000;text-align:center;z-index:10;position:relative}.cart .cart-title{color:#5836d0}.cart .cart-container{background-color:#fff;width:92%;margin:4%;overflow:scroll}.cart .cart-container .cart-product{display:flex;align-items:center;justify-content:space-between}.cart .cart-container .cart-product .cart-counter{display:flex;align-items:center}.cart .cart-container .cart-product .cart-counter button{margin:0 .5rem;font-weight:bold}.cart .cart-container .cart-product .cart-counter p{margin:0;font-size:1.2rem}.cart .cart-container .cart-product .cart-product-img{margin-right:1rem}.cart .cart-container .cart-product .cart-product-info{flex:1;text-align:left}.order{background-color:#ffe8c7;border:2px solid #000;position:fixed;left:15%;height:70%;width:60%;overflow:auto;z-index:20}.categories-container{height:50px;display:flex;align-items:center;justify-content:center;background-color:#ffe8c7}.categories-container .category{text-decoration:none;display:inline-block;width:19%;text-align:center;margin-right:1%;color:#000;cursor:pointer}.products{display:flex;flex-wrap:wrap}.products .product{display:flex;flex-direction:column;align-items:center;width:50%;margin-top:20px}.products .product .product-img{outline:2px solid purple;background-color:gray;height:200px;width:160px}.products .product .product-counter-container{display:flex;flex-direction:row;align-items:center}.products .product .product-counter-container button{margin-right:.5rem;margin-left:.5rem;width:32px;height:32px;border-radius:50%;cursor:pointer}.products .product .product-info{display:flex;flex-direction:column;align-items:center}.products .product .product-info .product-name{margin-bottom:0}.products .product .product-info .product-price{margin-top:0}.bg-popup{position:fixed;height:100%;width:100%;top:0;right:0;background-color:rgba(0,0,0,.558);z-index:5}.hidden{display:none}/*# sourceMappingURL=style.css.map */
