--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -179,6 +179,8 @@
         margin-right: 1%;
         color: black;
         cursor: pointer;
+        background-color: $peach;
+        border: 0;
     }
 }
 
