header = show all categories

--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -9,6 +9,7 @@
     align-items: center;
     height: 15vh;
     width: 100%;
+    cursor: pointer;
 
     .header-title {
         margin-bottom: -10px;
